--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,5 @@
 <head>
         <meta charset="utf-8">
         
-        <link rel="stylesheet" href="https://deity773.github.io/hero_association/css/main.css">
+        <link rel="stylesheet" href="/css/main.css">
     </head>
